<resources>
    <string name="app_name">Travel Guide</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email_error">PLease insert your email</string>
    <string name="not_email_error">Please insert a real email</string>
    <string name="password_error">Please insert your password</string>
    <string name="first_name_error">Please insert your first name</string>
    <string name="last_name_error">Please insert your last email</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_contact">Contact</string>

    <string name="home_second">Home Second</string>
    <string name="menu_share">Share</string>
    <string name="trip_name">Trip name</string>
    <string name="trip_location">Trip Location</string>
    <string name="cost_in">Cost in $</string>
    <string name="image">Image</string>
    <string name="save">Save</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
</resources>
